--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MongoDB Query Generator using OpenAI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -24,6 +31,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the OpenAI API key\n",
+    "\n",
+    "The OpenAI API key is stored in a `.env` file and load it here as an environment variable.\n",
+    "\n",
+    "`OPENAI_API_KEY=\"sk-TZP9XNLsdfskh23423jh234\"`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -44,6 +62,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate MongoDB Query using Chat Completion API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define system and user prompts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
@@ -55,24 +87,6 @@
     "    \"\"\"\n",
     "    \n",
     "def get_user_prompt(input_data, output_data):\n",
-    "    return f\"\"\"Your task is to write a MongoDB Query\\\n",
-    "    that would produce the expected output for the given input.\n",
-    "\n",
-    "    You will always return a JSON response with the following fields.\n",
-    "    ```\n",
-    "    mongoDBQuery: The MongoDB aggregation pipeline or find query to produce the expected output for a given input.\\\n",
-    "    This field corresponds to only the list of stages in the aggregation pipeline or the filter criteria in the find query.\\\n",
-    "    This field shouldn't contain the \"db.collection.aggregate\" or \"db.collection.find\" prefixes, just the filter criteria\\\n",
-    "    or the stages in the aggregation pipeline. \n",
-    "    \n",
-    "    queryExplanation: A detailed explanation for the query that was returned.\n",
-    "    ```\n",
-    "    \n",
-    "    Input data: {input_data} \n",
-    "    Expected output data: {output_data}\n",
-    "    \"\"\"\n",
-    "\n",
-    "def get_user_prompt_for_aggregation_pipeline(input_data, output_data):\n",
     "    return f\"\"\"Your task is to write a MongoDB Query, specifically an aggregation pipeline\\\n",
     "    that would produce the expected output for the given input.\n",
     "\n",
@@ -91,6 +105,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utility function to invoke Chat Completion API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -98,8 +119,7 @@
    "source": [
     "def get_mongodb_query(input_data, output_data, model=GPT3_MODEL):\n",
     "    system_prompt = get_system_prompt()\n",
-    "    #user_prompt = get_user_prompt(input_data, output_data)\n",
-    "    user_prompt = get_user_prompt_for_aggregation_pipeline(input_data, output_data)\n",
+    "    user_prompt = get_user_prompt(input_data, output_data)\n",
     "\n",
     "    #print(f\"System Prompt: {system_prompt}\")\n",
     "    #print(f\"User Prompt: {user_prompt}\")\n",
@@ -122,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1"
+    "### Data"
    ]
   },
   {
@@ -133,33 +153,25 @@
    "source": [
     "ex1_input_data = \"\"\"\n",
     "[\n",
-    "  {\n",
-    "    \"name\": \"Sachin\",\n",
-    "    \"team\": \"India\"\n",
-    "  },\n",
-    "  {\n",
-    "    \"name\": \"Sourav\",\n",
-    "    \"team\": \"India\"\n",
-    "  },\n",
-    "  {\n",
-    "    \"name\": \"Lara\",\n",
-    "    \"team\": \"West Indies\"\n",
-    "  }\n",
+    "  { \"name\": \"Sachin\", \"team\": \"India\" },\n",
+    "  { \"name\": \"Sourav\", \"team\": \"India\" },\n",
+    "  { \"name\": \"Lara\", \"team\": \"West Indies\" }\n",
     "]\n",
     "\"\"\"\n",
     "\n",
     "ex1_output_data = \"\"\"\n",
     "[\n",
-    " {\n",
-    "   \"team\": India,\n",
-    "   \"playerCount\": 2\n",
-    " },\n",
-    " {\n",
-    "   \"team\": \"West Indies\",\n",
-    "   \"playerCount\": 1\n",
-    " }\n",
+    " { \"team\": India, \"playerCount\": 2 },\n",
+    " { \"team\": \"West Indies\", \"playerCount\": 1 }\n",
     "]\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Query"
    ]
   },
   {
@@ -203,7 +215,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 2\n",
+    "### Additional examples\n",
+    "\n",
+    "Below are some additional examples to try out!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2\n",
     "\n",
     "Your task is to write a MongoDB aggregation pipeline to find the documents that have duplicates in the nested array \"courses\" and count the number of times those duplicate items are present in the array.  "
    ]
@@ -342,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 3\n",
+    "#### Example 3\n",
     "\n",
     "A simple find example"
    ]
@@ -426,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 4\n",
+    "#### Example 4\n",
     "\n",
     "Add a field"
    ]
@@ -558,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 5"
+    "#### Example 5"
    ]
   },
   {
@@ -706,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 6"
+    "#### Example 6"
    ]
   },
   {
@@ -892,7 +913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 7"
+    "#### Example 7"
    ]
   },
   {
@@ -1034,7 +1055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 8"
+    "#### Example 8"
    ]
   },
   {
@@ -1131,7 +1152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 9"
+    "#### Example 9"
    ]
   },
   {
@@ -1266,6 +1287,13 @@
    "source": [
     "get_mongodb_query(ex9_input_data, ex9_output_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
