--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
@@ -5,7 +5,7 @@
    "id": "eb464425-3579-4091-8861-968f1e224c7c",
    "metadata": {},
    "source": [
-    "## Generate MongoDB Query using function calling"
+    "# Generate MongoDB Query using function calling"
    ]
   },
   {
@@ -168,13 +168,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd7024c9-798c-4d3b-aeba-c385e651d519",
+   "metadata": {},
+   "source": [
+    "## Load the OpenAI API key\n",
+    "\n",
+    "There is a `.env` file that contains the below values and they are loaded as environment variables. \n",
+    "\n",
+    "- `OPENAI_API_KEY=\"sk-TZP9XNLsdfskh23423jh234\"`\n",
+    "- `MONGODB_CONNECTION_STRING=\"mongodb+srv://selvam:abcdefgh@playground.cwfqcov.mongodb.net/?retryWrites=true&w=majority\"`\n",
+    "- `DB_NAME=mongodb_test`\n",
+    "- `COLLECTION_NAME=mqg`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "001ba67d-46b3-405b-b6a7-e448e8b21325",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = load_dotenv()\n",
+    "\n",
+    "MONGODB_CONNECTION_STRING = os.environ.get(\"MONGODB_CONNECTION_STRING\")\n",
+    "DB_NAME = os.environ.get(\"DB_NAME\")\n",
+    "COLLECTION_NAME = os.environ.get(\"COLLECTION_NAME\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "43f01f89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = load_dotenv()\n",
+    "\n",
     "openai_client = OpenAI()\n",
     "\n",
     "#GPT_MODEL = \"gpt-3.5-turbo-1106\"\n",
@@ -182,65 +211,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c3d1a2e5-54c2-40ad-8374-76d156845c52",
+   "cell_type": "markdown",
+   "id": "6d9956d6-8ef7-4610-a5e3-76af95615390",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def pretty_print_conversation(messages):\n",
-    "    role_to_color = {\n",
-    "        \"system\": \"red\",\n",
-    "        \"user\": \"green\",\n",
-    "        \"assistant\": \"blue\",\n",
-    "        \"tool\": \"magenta\"\n",
-    "    }\n",
-    "    \n",
-    "    for message in messages:\n",
-    "        if message[\"role\"] == \"system\":\n",
-    "            print(colored(f\"system: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        elif message[\"role\"] == \"user\":\n",
-    "            print(colored(f\"user: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        elif message[\"role\"] == \"assistant\" and message.get(\"tool_calls\"):\n",
-    "            print(colored(f\"assistant: {message['tool_calls'][0]['function']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        elif message[\"role\"] == \"assistant\" and not message.get(\"tool_calls\"):\n",
-    "            print(colored(f\"assistant: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        elif message[\"role\"] == \"tool\":\n",
-    "            print(colored(f\"function ({message['name']}): {message['content']}\\n\", role_to_color[message[\"role\"]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4dab0362-5906-47eb-bf1b-b0977b3ded2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def chat_completion(messages, tools=None, tool_choice=None, model=GPT_MODEL):\n",
-    "    chat_completion = openai_client.chat.completions.create(\n",
-    "        model=GPT_MODEL,\n",
-    "        messages=messages,\n",
-    "        tools=tools,\n",
-    "        tool_choice=tool_choice,\n",
-    "        temperature=0,\n",
-    "        response_format={\"type\": \"json_object\"}\n",
-    "    )\n",
-    "    print(f\"chat_completion: {chat_completion}\")\n",
-    "    chat_completion_json = json.loads(chat_completion.model_dump_json())\n",
-    "    assistant_message = chat_completion_json[\"choices\"][0][\"message\"]\n",
-    "    finish_reason = chat_completion_json[\"choices\"][0][\"finish_reason\"]\n",
-    "    \n",
-    "    if assistant_message.get(\"function_call\") is None:\n",
-    "        assistant_message.pop(\"function_call\", None)\n",
-    "    \n",
-    "    #print(f\"Assistant full message: {assistant_message}\")\n",
-    "\n",
-    "    chat_response = {\n",
-    "        \"assistant_message\": assistant_message,\n",
-    "        \"finish_reason\": finish_reason\n",
-    "    }\n",
-    "    \n",
-    "    return chat_response"
+    "## Define a custom function"
    ]
   },
   {
@@ -283,16 +258,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc986c3f-cc14-40d9-954d-89e6aa8d5e7b",
+   "metadata": {},
+   "source": [
+    "## Define function to invoke Chat Completion API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4dab0362-5906-47eb-bf1b-b0977b3ded2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat_completion(messages, tools=None, tool_choice=None, model=GPT_MODEL):\n",
+    "    chat_completion = openai_client.chat.completions.create(\n",
+    "        model=GPT_MODEL,\n",
+    "        messages=messages,\n",
+    "        tools=tools,\n",
+    "        tool_choice=tool_choice,\n",
+    "        temperature=0,\n",
+    "        response_format={\"type\": \"json_object\"}\n",
+    "    )\n",
+    "    print(f\"chat_completion: {chat_completion}\")\n",
+    "    chat_completion_json = json.loads(chat_completion.model_dump_json())\n",
+    "    assistant_message = chat_completion_json[\"choices\"][0][\"message\"]\n",
+    "    finish_reason = chat_completion_json[\"choices\"][0][\"finish_reason\"]\n",
+    "\n",
+    "    # This is done to avoid a bug when we invoke the Chat Completion API\n",
+    "    # the next time around with the AI returned message in chat history\n",
+    "    # that has function_call as None. \n",
+    "    if assistant_message.get(\"function_call\") is None:\n",
+    "        assistant_message.pop(\"function_call\", None)\n",
+    "    \n",
+    "    #print(f\"Assistant full message: {assistant_message}\")\n",
+    "\n",
+    "    chat_response = {\n",
+    "        \"assistant_message\": assistant_message,\n",
+    "        \"finish_reason\": finish_reason\n",
+    "    }\n",
+    "    \n",
+    "    return chat_response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56289a57-9542-42ec-b6dd-55e8a77a4e33",
+   "metadata": {},
+   "source": [
+    "## Utility functions to read / write data in MongoDB "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b44d4ec2-dff2-4976-8e58-0898cd7381e9",
+   "id": "7334b7ae-d6fd-42a7-b262-6818d630273c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_database():\n",
-    "    CONNECTION_STRING = \"mongodb+srv://selvam:vnA0WRL9OJqVyzrC@playground.cwfqcov.mongodb.net/?retryWrites=true&w=majority\"\n",
-    "    DB_NAME=\"pymongo_tutorial\"\n",
-    "    client = MongoClient(CONNECTION_STRING)\n",
+    "    client = MongoClient(MONGODB_CONNECTION_STRING)\n",
     "    return client[DB_NAME]\n",
     "\n",
     "def insert_data(collection, data_array):\n",
@@ -312,6 +338,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9a99751-9de0-4f0c-b834-3976656f00d0",
+   "metadata": {},
+   "source": [
+    "## Custom function tool implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "739eb08f-3106-4055-aef4-bda7674bc9c6",
@@ -320,7 +354,7 @@
    "source": [
     "def verify_query(input_data, expected_output, query): \n",
     "    db = get_database()\n",
-    "    collection = db[\"mqg\"]\n",
+    "    collection = db[COLLECTION_NAME]\n",
     "\n",
     "    delete_data(collection)\n",
     "    insert_data(collection, input_data)\n",
@@ -333,6 +367,14 @@
     "    sorted_list2 = sorted(result_from_db, key=lambda x: json.dumps(x, sort_keys=True))\n",
     "    \n",
     "    return sorted_list1 == sorted_list2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc62960c-0d28-464d-a08a-4476f005c362",
+   "metadata": {},
+   "source": [
+    "## Function that invokes the custom function tool "
    ]
   },
   {
@@ -366,6 +408,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ac3d49e-365c-4081-b1b2-f8461b5abfab",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "1774dbc5-0e71-47d4-8a08-47eb4a6b9cc5",
@@ -382,6 +432,14 @@
     "    { \"team\": \"India\", \"playerCount\": 2 },\n",
     "    { \"team\": \"West Indies\", \"playerCount\": 1 }\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f663afe-6fec-4db1-8c7c-bdc141543b19",
+   "metadata": {},
+   "source": [
+    "## Prompts"
    ]
   },
   {
@@ -424,6 +482,50 @@
     "The query that you provided as argument to the function call didn't produce the expected output. \\\n",
     "Try again to write a new query that would produce the expected output\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5838ef1-399d-49d9-b74f-572057fc1e25",
+   "metadata": {},
+   "source": [
+    "## Utility function to format the chat conversation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c3d1a2e5-54c2-40ad-8374-76d156845c52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pretty_print_conversation(messages):\n",
+    "    role_to_color = {\n",
+    "        \"system\": \"red\",\n",
+    "        \"user\": \"green\",\n",
+    "        \"assistant\": \"blue\",\n",
+    "        \"tool\": \"magenta\"\n",
+    "    }\n",
+    "    \n",
+    "    for message in messages:\n",
+    "        if message[\"role\"] == \"system\":\n",
+    "            print(colored(f\"system: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
+    "        elif message[\"role\"] == \"user\":\n",
+    "            print(colored(f\"user: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
+    "        elif message[\"role\"] == \"assistant\" and message.get(\"tool_calls\"):\n",
+    "            print(colored(f\"assistant: {message['tool_calls'][0]['function']}\\n\", role_to_color[message[\"role\"]]))\n",
+    "        elif message[\"role\"] == \"assistant\" and not message.get(\"tool_calls\"):\n",
+    "            print(colored(f\"assistant: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
+    "        elif message[\"role\"] == \"tool\":\n",
+    "            print(colored(f\"function ({message['name']}): {message['content']}\\n\", role_to_color[message[\"role\"]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "714ca2ea-8b02-4a05-b30e-2b62bbd177d1",
+   "metadata": {},
+   "source": [
+    "## Core logic for this example"
    ]
   },
   {
