--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
@@ -27,6 +27,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55ae7fa4-c9cb-4cb5-9f05-19f5e8dbff57",
+   "metadata": {},
+   "source": [
+    "## Load the OpenAI API key\n",
+    "\n",
+    "The OpenAI API key is stored in a `.env` file and load it here as an environment variable.\n",
+    "\n",
+    "`OPENAI_API_KEY=\"sk-TZP9XNLsdfskh23423jh234\"`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "3f203d4c-5841-4a32-a976-a58842914908",
@@ -46,6 +58,14 @@
    "source": [
     "GPT3_MODEL = \"gpt-3.5-turbo-1106\"\n",
     "GPT4_MODEL = \"gpt-4-1106-preview\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73fbf1ad-bea1-47f4-84b6-33500aea52e2",
+   "metadata": {},
+   "source": [
+    "## Data"
    ]
   },
   {
@@ -69,6 +89,14 @@
     " { \"team\": \"West Indies\", \"playerCount\": 1 }\n",
     "]\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "071c3db9-3b6b-45b8-b7e2-687ef4e6b383",
+   "metadata": {},
+   "source": [
+    "## Prompts"
    ]
   },
   {
@@ -118,6 +146,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6af3f633-f22e-4b5a-bbdd-a4539077281c",
+   "metadata": {},
+   "source": [
+    "## Create an assistant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "52c0d30e-85ad-46f5-80ce-0941eb3fdbc2",
@@ -131,6 +167,22 @@
     ")\n",
     "\n",
     "MONGO_DB_SME_ASSISTANT_ID = assistant.id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a33fb1f-0c7b-4a91-8103-e30e03eafbea",
+   "metadata": {},
+   "source": [
+    "## Interact with the assistant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24571103-0aac-4b3f-be03-5ac15cebf098",
+   "metadata": {},
+   "source": [
+    "### Create a thread and add messages to it"
    ]
   },
   {
@@ -158,6 +210,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d60450e-b7c5-40cf-b295-0a1b1a0e4cbf",
+   "metadata": {},
+   "source": [
+    "### Run (invoke) the assistant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "601dc7b9-459a-4fed-9124-8a08d5d68724",
@@ -168,6 +228,14 @@
     "    thread_id=thread.id,\n",
     "    assistant_id=assistant.id\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41a70837-c253-476a-b5cf-43b6ff058b2b",
+   "metadata": {},
+   "source": [
+    "### Poll for assistant's response"
    ]
   },
   {
@@ -404,13 +472,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89391ee7-13c6-47c6-8031-bb3e3b9663d8",
+   "metadata": {},
+   "source": [
+    "### Custom function definition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "03109185-72b1-4ff9-8e29-d8a1470c7e20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "execute_query_function_interface = {\n",
+    "execute_query_function = {\n",
     "    \"name\": \"executeQuery\",\n",
     "    \"description\": \"Execute the MongoDB Query on the given input data to verify the output\",\n",
     "    \"parameters\": {\n",
@@ -434,6 +510,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "0db9be5c-a35c-48e8-8a50-7f83c762f676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_query(mongoDBQuery):\n",
+    "    return \"success\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1afb78ab-fd88-4c1a-9dcc-e14ee6ef4e70",
+   "metadata": {},
+   "source": [
+    "### Update the assistant"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "24928944-78fa-42e8-9cd6-65b8d317c518",
    "metadata": {},
@@ -444,10 +539,18 @@
     "    tools = [\n",
     "        {\n",
     "            \"type\": \"function\", \n",
-    "            \"function\": execute_query_function_interface\n",
+    "            \"function\": execute_query_function\n",
     "        }\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa9cb550-6acd-45c5-81dc-7ebc29716736",
+   "metadata": {},
+   "source": [
+    "### Utility functions to interact with the assistant"
    ]
   },
   {
@@ -500,25 +603,6 @@
     "    else:        \n",
     "        # If max_attempts reached without completion, then assistant call timed out\n",
     "        return None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae47b054-4ebc-4b6a-b187-d6acc9cf50ae",
-   "metadata": {},
-   "source": [
-    "### Custom function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "0db9be5c-a35c-48e8-8a50-7f83c762f676",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def execute_query(mongoDBQuery):\n",
-    "    return \"success\""
    ]
   },
   {
